@@ -12,3 +12,7 @@
 method and exchanges outside North America. Thanks to xley.
 
 20070928: Enabled detection of either TA-Lib v0.3.0 or more recent versions. Thanks to zwets.
+
+20070928: Improved installation instructions. Thanks to xley.
+
+20070928: Provide link to Debian packages. Thanks to zwets.
